# backstage-templater

./: pyproject.toml
backstage_templater/: cli.py
